Update constraints processing for video content capture.

The computation for refresh interval for content capture
produces bad results if it uses the implicit min/max range for
frame rate produced by the new spec-compliant algorithm.

This patch updates the spec-compliant constraints algorithm to
provide indication if the frame-rate range was explicitly set by
constraints.
MediaStreamVideoWebRtcSink is updated to use the frame-rate min/max
values to compute the refresh intervals only if they were explicitly
set by constrains, as was the case before the new constrains algorithm
was introduced.

BUG=729746

Review-Url: https://codereview.chromium.org/2922013002
Cr-Commit-Position: refs/heads/master@{#478101}

Former-commit-id: 303a5bbadb90b69780a86b10d5284ffc4c1dc165